{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 186,
  "lineage": "7a9c39ba-313f-aacd-853b-efc8eeb4c5c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edbe8a216ebf0943",
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:elastic-ip/eipalloc-0edbe8a216ebf0943",
            "association_id": "eipassoc-0b52245d501216aca",
            "domain": "vpc",
            "id": "eipalloc-0edbe8a216ebf0943",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0695ab9dca37c0de6",
            "private_dns": "ip-10-10-1-69.ap-northeast-2.compute.internal",
            "private_ip": "10.10.1.69",
            "public_dns": "ec2-43-200-36-119.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.36.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "MyVPC-NAT-EIP"
            },
            "tags_all": {
              "Name": "MyVPC-NAT-EIP"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ca93cdffae054a1",
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:instance/i-0b1a9cecd925f55d1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my-eks-shop-cluster-bastion-profile",
            "id": "i-0b1a9cecd925f55d1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "Bastion-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0571ca431cc251908",
            "private_dns": "ip-10-10-1-197.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.197",
            "public_dns": "ec2-13-124-95-176.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.95.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a3ec86fca19e1c34",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9dde508228b6b85",
            "tags": {
              "Name": "my-eks-shop-cluster-bastion"
            },
            "tags_all": {
              "Name": "my-eks-shop-cluster-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0724845e852fa71be",
              "sg-0725fb028cbb84aa2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_iam_instance_profile.bastion",
            "aws_iam_role.bastion",
            "aws_iam_role.eks_cluster",
            "aws_iam_role_policy_attachment.cluster_policies",
            "aws_security_group.bastion",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main",
            "data.aws_ami.bastion",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:internet-gateway/igw-05de544ddae9bc138",
            "id": "igw-05de544ddae9bc138",
            "owner_id": "335507813633",
            "tags": {
              "Name": "MyVPC-Public"
            },
            "tags_all": {
              "Name": "MyVPC-Public"
            },
            "vpc_id": "vpc-0c4bf8d61517a9a9f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edbe8a216ebf0943",
            "association_id": "eipassoc-0b52245d501216aca",
            "connectivity_type": "public",
            "id": "nat-041314dccd7f1bec9",
            "network_interface_id": "eni-0695ab9dca37c0de6",
            "private_ip": "10.10.1.69",
            "public_ip": "43.200.36.119",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e9dde508228b6b85",
            "tags": {
              "Name": "MyVPC-NAT"
            },
            "tags_all": {
              "Name": "MyVPC-NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:route-table/rtb-03de82effb28bad10",
            "id": "rtb-03de82effb28bad10",
            "owner_id": "335507813633",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-041314dccd7f1bec9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyVPC-Pri-RTB"
            },
            "tags_all": {
              "Name": "MyVPC-Pri-RTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4bf8d61517a9a9f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:route-table/rtb-0ba6451b0a2972ca5",
            "id": "rtb-0ba6451b0a2972ca5",
            "owner_id": "335507813633",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05de544ddae9bc138",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyVPC-Pub-RTB"
            },
            "tags_all": {
              "Name": "MyVPC-Pub-RTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4bf8d61517a9a9f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0885c1061680efb91",
            "route_table_id": "rtb-03de82effb28bad10",
            "subnet_id": "subnet-03ed3605edc4336e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fc8355f333235d0",
            "route_table_id": "rtb-03de82effb28bad10",
            "subnet_id": "subnet-087b9b1a5fbce436f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0e45afd52595bd5",
            "route_table_id": "rtb-0ba6451b0a2972ca5",
            "subnet_id": "subnet-0e9dde508228b6b85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08083bc0e1079dc48",
            "route_table_id": "rtb-0ba6451b0a2972ca5",
            "subnet_id": "subnet-09919cc4aaf70f619"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:security-group/sg-0725fb028cbb84aa2",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0725fb028cbb84aa2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from allowed CIDRs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-eks-shop-cluster-bastion-2025090223371500640000000c",
            "name_prefix": "my-eks-shop-cluster-bastion-",
            "owner_id": "335507813633",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-shop-cluster-bastion"
            },
            "tags_all": {
              "Name": "my-eks-shop-cluster-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4bf8d61517a9a9f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:security-group/sg-046c8d05f61f9a906",
            "description": "Security group for MySQL RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046c8d05f61f9a906",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "Allow MySQL access from within the VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "my-eks-shop-cluster-db-2025090223371500750000000e",
            "name_prefix": "my-eks-shop-cluster-db-",
            "owner_id": "335507813633",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-shop-cluster-db"
            },
            "tags_all": {
              "Name": "my-eks-shop-cluster-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4bf8d61517a9a9f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:security-group/sg-026e6ab257fa05170",
            "description": "Security group for ElastiCache Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026e6ab257fa05170",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "Allow Redis access from within the VPC",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "my-eks-shop-cluster-redis-2025090223371500700000000d",
            "name_prefix": "my-eks-shop-cluster-redis-",
            "owner_id": "335507813633",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-shop-cluster-redis"
            },
            "tags_all": {
              "Name": "my-eks-shop-cluster-redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4bf8d61517a9a9f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:subnet/subnet-03ed3605edc4336e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ed3605edc4336e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335507813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-SubNet-1",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Private-SubNet-1",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c4bf8d61517a9a9f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:subnet/subnet-087b9b1a5fbce436f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087b9b1a5fbce436f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335507813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-SubNet-2",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Private-SubNet-2",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c4bf8d61517a9a9f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:subnet/subnet-0e9dde508228b6b85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9dde508228b6b85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "335507813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-SubNet-1",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Public-SubNet-1",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c4bf8d61517a9a9f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:subnet/subnet-09919cc4aaf70f619",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09919cc4aaf70f619",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "335507813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-SubNet-2",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Public-SubNet-2",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c4bf8d61517a9a9f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:vpc/vpc-0c4bf8d61517a9a9f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-05a63b9a620e553ff",
            "default_route_table_id": "rtb-0f5191581c52f666d",
            "default_security_group_id": "sg-08cc8bc4814d48f48",
            "dhcp_options_id": "dopt-0ae639c5a77d7901b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c4bf8d61517a9a9f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5191581c52f666d",
            "owner_id": "335507813633",
            "tags": {
              "Name": "MyVPC",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared"
            },
            "tags_all": {
              "Name": "MyVPC",
              "kubernetes.io/cluster/my-eks-shop-cluster": "shared"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "shop",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "shop",
            "metadata": [
              {
                "generation": 0,
                "name": "shop",
                "resource_version": "29868",
                "uid": "b76a2330-453e-44b1-b6db-02a9f50abba4"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "shop"
          },
          "dependencies": [
            "aws_eks_addon.coredns",
            "aws_eks_addon.kube_proxy",
            "aws_eks_addon.pod_identity_agent",
            "aws_eks_addon.vpc_cni",
            "aws_eks_cluster.eks",
            "aws_eks_node_group.nodes",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_node",
            "aws_iam_role_policy_attachment.cluster_policies",
            "aws_iam_role_policy_attachment.node_policies",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    }
  ]
}